# 5G-network-manager

./: .env  .gitignore  NS3-INTEGRATION.md  README.md  app.py  check_db_tables.py  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
5g-sim/: 5g_sim.cc  5g_sim1.cc  datastream_client.py  datastream_server.py
app/: main.py  websocket_manager.py
app/api/: __init__.py  auth.py  dashboard.py  deps.py  router.py
app/api/routers/: __init__.py  auth.py  dashboard.py  devices.py  metrics.py  ns3.py  slices.py  users.py
app/api/v1/endpoints/: __init__.py  base.py
app/core/: __init__.py  batch_processor.py  compression.py  config.py  error_handling.py  metrics.py  security.py  websocket_client.py
app/dashboard/: __init__.py  api.py  app.py  app1.py  config.py  db_utils.py  router.py
app/db/: __init__.py  dashboard_queries.py  database.py  models.py
app/schemas/: dashboard.py
app/websocket/: __init__.py  manager.py
etl/: config.py  etl_runner.py  extract.py  load.py  transform.py
scripts/: README.md  alembic.ini  create_tables.py  init_db.py  inspect_db.py  seed_db.py  simulate_ns3.py  test_auth.py  test_db.py  test_ns3_client.py  test_websocket.py
scripts/alembic/: env.py
scripts/alembic/versions/: 9af8ca2839e9_remove_device_id_from_alerts_table.py
scripts/db/: backup.sh  migrate.sh  restore.sh  schema.sh  scr.py
scripts/monitoring/: monitor.sh
scripts/ns3/: setup-ns3-simulation.sh  test-ns3-integration.sh
